<resources>
    <string name="app_name">Material2 Sample</string>
    <string name="cd_navigation">Navigation Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_snackbar">Snackbar</string>
    <string name="caption_sort">Sorting:</string>
    <string name="action_sort_by_default">by default</string>
    <string name="action_sort_by_date">by date</string>
    <string name="action_sort_by_name">by name</string>
    <string name="action_policy">Privacy policy</string>
    <string name="action_terms_of_use">Terms of use</string>
    <string name="action_licenses">Open source licenses</string>
    <string name="action_clear">Clear all</string>
    <string name="hint_note">New note</string>
    <string name="caption_date">Date</string>
    <string name="caption_time">Time</string>
    <string name="caption_save">Save</string>
    <string name="action_material_button">Button</string>
    <string name="action_cards">Cards</string>
    <string name="action_chips">Chips</string>
    <string name="action_progress_indicators">Progress indicators</string>
    <string name="action_selection_controls">Selection controls</string>
    <string name="action_text_fields">Text fields</string>

    <string name="main_widget_material_button">Material Buttons</string>
    <string name="main_widget_material_button_default">Round corner button</string>
    <string name="main_widget_material_button_stroke">Button with stroke</string>
    <string name="main_widget_material_button_unelevated">Unelevated button</string>
    <string name="main_widget_material_button_outline">Outlined button</string>
    <string name="main_widget_material_button_text">Text button</string>
    <string name="main_widget_material_button_icon">Icon button</string>
    <string name="main_widget_toggle_button">Toggle Button</string>
    <string name="main_widget_switch">Switch</string>
    <string name="main_widget_check_box">Check Box</string>
    <string name="main_widget_check_box_1">CheckBox 1</string>
    <string name="main_widget_check_box_2">CheckBox 2</string>
    <string name="main_widget_check_box_3">CheckBox 3</string>
    <string name="main_widget_radio">Radio Group and Radio Buttons</string>
    <string name="main_widget_radio_button_1">RadioButton 1</string>
    <string name="main_widget_radio_button_2">RadioButton 2</string>
    <string name="main_widget_radio_button_3">RadioButton 3</string>
    <string name="main_widget_progress_bar">Progress Bar</string>
    <string name="main_widget_text_input_layout">Text Input Layout</string>
    <string name="main_widget_edit_text_outline_box">Outlined Box</string>
    <string name="main_widget_edit_text_filled_box">Filled Box</string>
    <string name="main_widget_chip">Chips</string>

    <string name="main_card_title">Title goes here</string>
    <string name="main_card_with_stroke_title">Card with stroke</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
</resources>
