<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/dimen_common"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/dimen_common">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common"
                android:text="@string/main_widget_switch"
                android:textColor="@color/colorPrimary"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common"
                android:checked="true"
                android:switchPadding="@dimen/dimen_common"
                android:text="@string/main_widget_switch"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common"
                android:text="@string/main_widget_check_box"
                android:textColor="@color/colorPrimary"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common"
                android:checked="true"
                android:text="@string/main_widget_check_box_1"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_widget_check_box_2"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_widget_check_box_3"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common"
                android:text="@string/main_widget_radio"
                android:textColor="@color/colorPrimary"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common">

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/main_widget_radio_button_1"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_widget_radio_button_2"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_widget_radio_button_3"/>
        </RadioGroup>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>