<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/ic_account_circle_black_24dp"
                tools:ignore="ContentDescription"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="User Name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="user@gmail.com"
                    android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation_menu"/>

    <View
            style="@style/Divider"/>

    <TextView
            android:text="@string/action_licenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuItem"/>

    <View
            style="@style/Divider"/>

    <TextView
            android:text="@string/action_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuItem"/>

    <View
            style="@style/Divider"/>

    <TextView
            android:text="@string/action_terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuItem"/>
</LinearLayout>